--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -27,7 +27,7 @@ bookiePort=3181
 
 # Set the network interface that the bookie should listen on.
 # If not set, the bookie will listen on all interfaces.
-#listeningInterface=eth0
+# listeningInterface=eth0
 
 # Whether the bookie allowed to use a loopback interface as its primary
 # interface(i.e. the interface it uses to establish its identity)?
@@ -40,10 +40,20 @@ bookiePort=3181
 # establish their identities as 127.0.0.1:3181, and only one will be able
 # to join the cluster. For VPSs configured like this, you should explicitly
 # set the listening interface.
-#allowLoopback=false
+# allowLoopback=false
+
+# Whether the bookie allowed to use an ephemeral port (port 0) as its server port.
+# By default, an ephemeral port is not allowed. Using an ephemeral port
+# as the service port usually indicates a configuration error. However, in unit
+# tests, using ephemeral port will address port conflicts problem and allow
+# running tests in parallel.
+# allowEphemeralPorts=false
 
 # Directory Bookkeeper outputs its write ahead log
 journalDirectory=/tmp/bk-txn
+
+# The dir names to store journal files
+# journalDirectories=/tmp/bk-txn
 
 # Directory Bookkeeper outputs ledger snapshots
 # could define multi directories to store snapshots, separated by ','
@@ -54,6 +64,7 @@ journalDirectory=/tmp/bk-txn
 # which reduce the contention between random i/o and sequential write.
 # It is possible to run with a single disk, but performance will be significantly lower.
 ledgerDirectories=/tmp/bk-data
+
 # Directories to store index files. If not specified, will use ledgerDirectories to store.
 # indexDirectories=/tmp/bk-data
 
@@ -70,6 +81,12 @@ ledgerDirectories=/tmp/bk-data
 # This parameter is used by zookeeper-based ledger manager as a root znode to
 # store all ledgers.
 # zkLedgersRootPath=/ledgers
+
+# The zookeeper client backoff retry start time in millis.
+# zkRetryBackoffStartMs=1000
+
+# The zookeeper client backoff retry max time in millis.
+# zkRetryBackoffMaxMs=10000
 
 # Ledger storage implementation class
 # ledgerStorageClass=org.apache.bookkeeper.bookie.SortedLedgerStorage
@@ -114,28 +131,26 @@ explicitLacInterval = 1
 # more memory will be used for offsets. Each offset consists of 3 longs.
 # This parameter should _not_ be modified unless you know what you're doing.
 # The default is 100,000.
-#compactionMaxOutstandingRequests=100000
+# compactionMaxOutstandingRequests=100000
 
 # Set the rate at which compaction will readd entries. The unit is adds per second.
-#compactionRate=1000
+# compactionRate=1000
 
 # Throttle compaction by bytes or by entries. 
-#isThrottleByBytes=false
+# isThrottleByBytes=false
 
 # Set the rate at which compaction will readd entries. The unit is adds per second.
-#compactionRateByEntries=1000
+# compactionRateByEntries=1000
 
 # Set the rate at which compaction will readd entries. The unit is bytes added per second.
-#compactionRateByBytes=1000000
+# compactionRateByBytes=1000000
 
 # Max file size of journal file, in mega bytes
 # A new journal file will be created when the old one reaches the file size limitation
-#
 # journalMaxSizeMB=2048
 
 # Max number of old journal file to kept
 # Keep a number of old journal files would help data recovery in specia case
-#
 # journalMaxBackups=5
 
 # How much space should we pre-allocate at a time in the journal
@@ -143,6 +158,10 @@ explicitLacInterval = 1
 
 # Size of the write buffers used for the journal
 # journalWriteBufferSizeKB=64
+
+# All the journal writes and commits should be aligned to given size.
+# If not, zeros will be padded to align to given size.
+# journalAlignmentSize=512
 
 # Should we remove pages from page cache after force write
 # journalRemoveFromPageCache=false
@@ -157,11 +176,17 @@ explicitLacInterval = 1
 # Maximum writes to buffer to achieve grouping
 # journalBufferedWritesThreshold=524288
 
+# Maximum entries to buffer to impose on a journal write to achieve grouping.
+# journalBufferedEntriesThreshold=0
+
 # If we should flush the journal when journal queue is empty
 # journalFlushWhenQueueEmpty=false
 
 # The number of threads that should handle journal callbacks
 # numJournalCallbackThreads=1
+
+# The journal format version to write.
+# journalFormatVersionToWrite=4
 
 # How long the interval to trigger next garbage collection, in milliseconds
 # Since garbage collection is running in background, too frequent gc
@@ -169,10 +194,11 @@ explicitLacInterval = 1
 # interval if there is enough disk capacity.
 # gcWaitTime=1000
 
-# How long the interval to trigger next garbage collection of overreplicated
-# ledgers, in milliseconds [Default: 1 day]. This should not be run very frequently since we read
-# the metadata for all the ledgers on the bookie from zk
-# gcOverreplicatedLedgerWaitTime=86400000
+# Whether force compaction is allowed when disk full or almost full
+# Force GC may get some space back, but may also fill up disk space more quickly.
+# This is because new log files are created before GC, while old
+# garbage log files deleted after GC.
+# isForceGCAllowWhenNoSpace=false
 
 # How long the interval to flush ledger index pages to disk, in milliseconds
 # Flushing index files will introduce much random disk I/O.
@@ -182,11 +208,9 @@ explicitLacInterval = 1
 # on too frequent flushing. You can consider increment flush interval
 # to get better performance, but you need to pay more time on bookie
 # server restart after failure.
-#
 # flushInterval=100
 
 # Interval to watch whether bookie is dead or not, in milliseconds
-#
 # bookieDeathWatchInterval=1000
 
 ## zookeeper client settings
@@ -195,12 +219,14 @@ explicitLacInterval = 1
 # The server list can be comma separated values, for example:
 # zkServers=zk1:2181,zk2:2181,zk3:2181
 zkServers=localhost:2181
+
 # ZooKeeper client session timeout in milliseconds
 # Bookie server will exit if it received SESSION_EXPIRED because it
 # was partitioned off from ZooKeeper for more than the session timeout
 # JVM garbage collection, disk I/O will cause SESSION_EXPIRED.
 # Increment this value could help avoiding this issue
 zkTimeout=10000
+
 # Set ACLs on every node written on ZooKeeper, this way only allowed users
 # will be able to read and write BookKeeper metadata stored on ZooKeeper.
 # In order to make ACLs work you need to setup ZooKeeper JAAS authentication
@@ -219,6 +245,15 @@ zkEnableSecurity=false
 # Default value is true.
 #
 # serverTcpNoDelay=true
+
+# This setting is used to send keep-alive messages on connection-oriented sockets.
+# serverSockKeepalive=true
+
+# Set socket linger timeout on close.
+# When enabled, a close or shutdown will not return until all queued messages for
+# the socket have been successfully sent or the linger timeout has been reached.
+# Otherwise, the call returns immediately and the closing is done in the background.
+# serverTcpLinger=0
 
 ## ledger cache settings
 
@@ -249,38 +284,49 @@ zkEnableSecurity=false
 # the limitation of number of index pages.
 # pageLimit=-1
 
-#If all ledger directories configured are full, then support only read requests for clients.
-#If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted
-#to read-only mode and serve only read requests. Otherwise the bookie will be shutdown.
-#By default this will be disabled.
-#readOnlyModeEnabled=false
+# If all ledger directories configured are full, then support only read requests for clients.
+# If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted
+# to read-only mode and serve only read requests. Otherwise the bookie will be shutdown.
+# By default this will be disabled.
+# readOnlyModeEnabled=false
 
-#For each ledger dir, maximum disk space which can be used.
-#Default is 0.95f. i.e. 95% of disk can be used at most after which nothing will
-#be written to that partition. If all ledger dir partions are full, then bookie
-#will turn to readonly mode if 'readOnlyModeEnabled=true' is set, else it will
-#shutdown.
-#Valid values should be in between 0 and 1 (exclusive). 
-#diskUsageThreshold=0.95
+# Whether the Bookie is force started in read only mode or not
+# forceReadOnlyBookie=false
 
-#Set the disk free space low water mark threshold. Disk is considered full when 
-#usage threshold is exceeded. Disk returns back to non-full state when usage is 
-#below low water mark threshold. This prevents it from going back and forth 
-#between these states frequently when concurrent writes and compaction are 
-#happening. This also prevent bookie from switching frequently between 
-#read-only and read-writes states in the same cases.
-#diskUsageLwmThreshold=0.90
+# For each ledger dir, maximum disk space which can be used.
+# Default is 0.95f. i.e. 95% of disk can be used at most after which nothing will
+# be written to that partition. If all ledger dir partions are full, then bookie
+# will turn to readonly mode if 'readOnlyModeEnabled=true' is set, else it will
+# shutdown.
+# Valid values should be in between 0 and 1 (exclusive).
+# diskUsageThreshold=0.95
 
-#Disk check interval in milli seconds, interval to check the ledger dirs usage.
-#Default is 10000
-#diskCheckInterval=10000
+# The disk free space low water mark threshold.
+# Disk is considered full when usage threshold is exceeded.
+# Disk returns back to non-full state when usage is below low water mark threshold.
+# This prevents it from going back and forth between these states frequently
+# when concurrent writes and compaction are happening. This also prevent bookie from
+# switching frequently between read-only and read-writes states in the same cases.
+# diskUsageWarnThreshold=0.95
+
+# Set the disk free space low water mark threshold. Disk is considered full when
+# usage threshold is exceeded. Disk returns back to non-full state when usage is
+# below low water mark threshold. This prevents it from going back and forth
+# between these states frequently when concurrent writes and compaction are
+# happening. This also prevent bookie from switching frequently between
+# read-only and read-writes states in the same cases.
+# diskUsageLwmThreshold=0.90
+
+# Disk check interval in milli seconds, interval to check the ledger dirs usage.
+# Default is 10000
+# diskCheckInterval=10000
 
 # Interval at which the auditor will do a check of all ledgers in the cluster.
 # By default this runs once a week. The interval is set in seconds.
 # To disable the periodic check completely, set this to 0.
 # Note that periodic checking will put extra load on the cluster, so it should
 # not be run more frequently than once a day.
-#auditorPeriodicCheckInterval=604800
+# auditorPeriodicCheckInterval=604800
 
 # The interval between auditor bookie checks.
 # The auditor bookie check, checks ledger metadata to see which bookies should
@@ -289,25 +335,39 @@ zkEnableSecurity=false
 # Setting this to 0 disabled the periodic check. Bookie checks will still
 # run when a bookie fails.
 # The interval is specified in seconds.
-#auditorPeriodicBookieCheckInterval=86400
+# auditorPeriodicBookieCheckInterval=86400
+
+# Whether the Bookie itself can start auto-recovery service also or not
+# autoRecoveryDaemonEnabled=false
 
 # Entry log flush interval in bytes.
 # Default is 0. 0 or less disables this feature and effectively flush
 # happens on log rotation.
 # Flushing in smaller chunks but more frequently reduces spikes in disk
 # I/O. Flushing too frequently may also affect performance negatively.
-#flushEntrylogBytes=0
+# flushEntrylogBytes=0
 
 # How long to wait, in seconds, before starting auto recovery of a lost bookie
-#lostBookieRecoveryDelay=0
+# lostBookieRecoveryDelay=0
 
-# number of threads that should handle write requests. if zero, the writes would
+# Number of threads that should handle write requests. if zero, the writes would
 # be handled by netty threads directly.
 # numAddWorkerThreads=1
 
-# number of threads that should handle read requests. if zero, the reads would
+# Number of threads that should handle read requests. if zero, the reads would
 # be handled by netty threads directly.
 # numReadWorkerThreads=1
+
+## Long poll parameters
+
+# The number of threads that should handle long poll requests
+# numLongPollWorkerThreads=10
+
+# The tick duration in milliseconds for long poll requests
+# requestTimerTickDurationMs=10
+
+# The number of ticks per wheel for the long poll request timer.
+# requestTimerNumTicks=1024
 
 # The number of bytes we should use as capacity for BufferedReadChannel. Default is 512 bytes.
 # readBufferSizeBytes=512
@@ -319,15 +379,36 @@ zkEnableSecurity=false
 # co-ordination service(eg: zookeeper service).
 # When false, bookie will use its ipaddress for the registration.
 # Defaults to false.
-#useHostNameAsBookieID=false
+# useHostNameAsBookieID=false
+
+# The bookie to listen for BookKeeper clients executed on the local JVM
+# enableLocalTransport=false
+
+# Whether conf the bookie to disable bind on network interfaces,
+# this bookie will be available only to BookKeeper clients executed on the local JVM
+# disableServerSocketBind=false
+
+# Whether sorted-ledger storage enabled (default true)
+# sortedLedgerStorageEnabled=ture
+
+# The skip list data size limitation (default 64MB)
+# skipListSizeLimit=64 * 1024 * 1024L
+
+# The number of bytes we should use as chunk allocation for
+# org.apache.bookkeeper.bookie.SkipListArena
+# skipListArenaChunkSize=4096*1024
+
+# The max size we should allocate from the skiplist arena. Allocations
+# larger than this should be allocated directly by the VM to avoid fragmentation.
+# skipListArenaMaxAllocSize=128 * 1024
 
 # Auto-replication
 # The grace period, in seconds, that the replication worker waits before fencing and
 # replicating a ledger fragment that's still being written to upon bookie failure.
-#openLedgerRereplicationGracePeriod=30
+# openLedgerRereplicationGracePeriod=30
 
 # Whether statistics are enabled
-#enableStatistics=true
+# enableStatistics=true
 
 # Stats Provider Class (if statistics are enabled)
 #statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
@@ -338,3 +419,26 @@ zkEnableSecurity=false
 
 # Configure the Bookie to allow/disallow multiple ledger/index/journal directories in the same filesystem diskpartition
 # allowMultipleDirsUnderSameDiskPartition=false
+
+## Rx adaptive ByteBuf allocator parameters
+
+# The Recv ByteBuf allocator initial buf size
+# byteBufAllocatorSizeInitial=64 * 1024
+
+# The Recv ByteBuf allocator min buf size
+# byteBufAllocatorSizeMin=64 * 1024
+
+# The Recv ByteBuf allocator max buf size
+# byteBufAllocatorSizeMax=1 * 1024 * 1024
+
+# The bookie authentication provider factory class name.
+# If this returns null, no authentication will take place.
+# bookieAuthProviderFactoryClass=null
+
+# The minimum safe Usable size to be available in index directory for Bookie to create Index File while replaying
+# journal at the time of Bookie Start in Readonly Mode (in bytes)
+# minUsableSizeForIndexFileCreation=100 * 1024 * 1024L
+
+# Whether it is allowed to have multiple ledger/index/journal
+# Directories in the same filesystem disk partition
+# allowMultipleDirsUnderSameDiskPartition=true
