--- a/deploy/kubernetes/gke/bookkeeper.yaml
+++ b/deploy/kubernetes/gke/bookkeeper.yaml
@@ -63,8 +63,7 @@ spec:
         spec:
             containers:
               - name: bookie
-                image: apachedistributedlog/distributedlog:0.5.0
-                # image: apache/bookkeeper:latest
+                image: apache/bookkeeper:latest
                 resources:
                   requests:
                     memory: "3Gi"
@@ -72,8 +71,7 @@ spec:
                   limits:
                     memory: "5Gi"
                     cpu: "2000m"
-                # use the patched entrypoint.sh - it will automatically created the desired distributedlog namespace
-                command: [ "/bin/bash", "/opt/distributedlog/bin/entrypoint.sh" ]
+                command: [ "/bin/bash", "/opt/bookkeeper/bin/entrypoint.sh" ]
                 args: ["/opt/bookkeeper/bin/bookkeeper", "bookie"]
                 ports:
                   - name: client
